--- a/package.json
+++ b/package.json
@@ -20,16 +20,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.3.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "autoprefixer": "^10.4.17",
+    "cache-manager": "^5.4.0",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.4",
     "ejs": "^3.1.9",
     "hbs": "^4.2.0",
+    "ioredis": "^5.3.2",
     "mysql2": "^3.9.1",
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
